--- a/index.html
+++ b/index.html
@@ -274,7 +274,15 @@
 				    </div><!--//resume-wrapper-->
 				</div><!--//container-fluid-->
 			</div><!--//main-content-wrapper-->
-		
+			<div class="resume-contact mt-4">
+				<ul class="resume-contact-list list-unstyled list-inline mb-0 justify-content-between">
+				<center>
+					<li class="list-inline-item me-md-3 me-lg-5"><i class="resume-contact-icon bi bi-envelope me-2"></i><a id="emailLink" href="https://mail.google.com/mail/?view=cm&fs=1&to=eng.sib.mu@gmail.com&su=Inquiry about your site&body= ">Send an email for more information</a>
+						
+						</li>
+				</center>
+				</ul>
+			</div><!--//-EMAIL-->
 		
 		</div><!--//row-->
 	
