--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 			<div class="resume-contact mt-4">
 				<ul class="resume-contact-list list-unstyled list-inline mb-0 justify-content-between">
 				<center>
-					<li class="list-inline-item me-md-3 me-lg-5"><i class="resume-contact-icon bi bi-envelope me-2"></i><a href="mailto:eng.sib.mu@gmail.com&su=Inquiry about your site&body= ">Send an email for more information</a>
+					<li class="list-inline-item me-md-3 me-lg-5"><i class="resume-contact-icon bi bi-envelope me-2"></i><a href="mailto:eng.sib.mu@gmail.com?subject=Inquiry about your site&body= " style="color: whitesmoke; text-decoration: none;">Send Email for more information</a>
 						
 						</li>
 				</center>
