--- a/index.html
+++ b/index.html
@@ -135,6 +135,12 @@
 										
 										<ul class="list-unstyled">
 								        <li class="mb-2">
+										<li class="mb-2">
+												<div class="resume-skill-name">Networks</div>
+												<div class="progress resume-progress" role="progressbar" aria-label="Basic example" aria-valuenow="86" aria-valuemin="0" aria-valuemax="100">
+												  <div class="progress-bar resume-progress-bar" style="width: 86%"></div>
+												</div>
+											</li>
 								            <div class="resume-skill-name">PHP</div>
 											<div class="progress resume-progress" role="progressbar" aria-label="Basic example" aria-valuenow="98" aria-valuemin="0" aria-valuemax="100">
 											  <div class="progress-bar resume-progress-bar" style="width: 98%"></div>
