--- a/index.html
+++ b/index.html
@@ -224,12 +224,12 @@
 										        <div class="resume-degree font-weight-bold"></div>
 												<div class="resume-degree font-weight-bold"></div>
 												<div class="item">
-													<h4 class="resume-degree font-weight-bold"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://www.credly.com/badges/07a7435d-313c-4403-a557-bd3f82de9095" target="_blank" style="color: whitesmoke; text-decoration: none;">CCNA v7 Introduction to Network</a></h4>
-													<h4 class="resume-degree font-weight-bold"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://www.credly.com/badges/7da85a8c-34ad-468f-aa70-cf6c76c5dd01" target="_blank" style="color: whitesmoke; text-decoration: none;">Introduction to Cybersecurity</a></h4>
-													<h4 class="resume-degree font-weight-bold"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://www.credly.com/badges/065bbf61-87f4-4bfb-9a15-f61711ca22eb" target="_blank" style="color: whitesmoke; text-decoration: none;">Cyber Threat Management</a></h4>
-													<h4 class="resume-degree font-weight-bold"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://www.credly.com/badges/259be027-4a52-446b-adfe-f8e164599f62" target="_blank" style="color: whitesmoke; text-decoration: none;">Endpoint Security</a></h4>
-													<h4 class="resume-degree font-weight-bold"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://www.credly.com/badges/a3645cc0-dc4a-4034-abfa-a0baa60946c4" target="_blank" style="color: whitesmoke; text-decoration: none;">Ethical Hacker</a></h4>
-													<h4 class="resume-degree font-weight-bold"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://www.credly.com/badges/b38f38cc-f8b4-45a0-9517-48ca525b34f6" target="_blank" style="color: whitesmoke; text-decoration: none;">Introduction to Data Science</a></h4>
+													<h4 class="resume-degree font-weight-bold"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://www.credly.com/badges/07a7435d-313c-4403-a557-bd3f82de9095" target="_blank" style="color: whitesmoke; text-decoration: none;">CCNA v7 Introduction to Network</a></h4><p>
+													<h4 class="resume-degree font-weight-bold"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://www.credly.com/badges/7da85a8c-34ad-468f-aa70-cf6c76c5dd01" target="_blank" style="color: whitesmoke; text-decoration: none;">Introduction to Cybersecurity</a></h4><p>
+													<h4 class="resume-degree font-weight-bold"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://www.credly.com/badges/065bbf61-87f4-4bfb-9a15-f61711ca22eb" target="_blank" style="color: whitesmoke; text-decoration: none;">Cyber Threat Management</a></h4><p>
+													<h4 class="resume-degree font-weight-bold"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://www.credly.com/badges/259be027-4a52-446b-adfe-f8e164599f62" target="_blank" style="color: whitesmoke; text-decoration: none;">Endpoint Security</a></h4><p>
+													<h4 class="resume-degree font-weight-bold"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://www.credly.com/badges/a3645cc0-dc4a-4034-abfa-a0baa60946c4" target="_blank" style="color: whitesmoke; text-decoration: none;">Ethical Hacker</a></h4><p>
+													<h4 class="resume-degree font-weight-bold"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://www.credly.com/badges/b38f38cc-f8b4-45a0-9517-48ca525b34f6" target="_blank" style="color: whitesmoke; text-decoration: none;">Introduction to Data Science</a></h4><p>
 
 										    </li>
 									    </ul>
